Ensure node preview fits into doc overlay by truncating port names if necessary

--- a/style/Sidebar.css
+++ b/style/Sidebar.css
@@ -127,9 +127,6 @@
   .search-input__text-input {
     line-height: 20px;
   }
-  .search-input {
-    height: 20px;
-  }
   .search-input__button {
     width: 20px;
     height: 20px;
