--- a/style/base.css
+++ b/style/base.css
@@ -88,4 +88,5 @@ input[type=number]::-webkit-inner-spin-button {
 
 #sidebar-tooltip.show {
   opacity: 1;
+  right: 0;
 }
